--- a/.chainlit/config.toml
+++ b/.chainlit/config.toml
@@ -98,7 +98,7 @@ cot = "full"
 login_page_image = "/public/logo_dark.png"
 
 # Custom login page image filter (Tailwind internal filters, no dark/light variants)
-login_page_image_filter = "brightness-50 grayscale"
+# login_page_image_filter = "brightness-50"
 # login_page_image_dark_filter = "contrast-200 blur-sm"
 
 # Specify a custom meta image url.
